--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       padding: 1.5rem;
       margin: 1rem auto;
       max-width: 600px;
-      background: white;
+      background: rgb(102, 113, 151);
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
