--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
       color: white;
       margin-top: 20px;
     }
+
+     .contact-btn {
+      display: block;
+      width: 200px;
+      margin: 1rem auto;
+      padding: 0.5rem;
+      background-color: #4CAF50;
+      color: white;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+
+    .contact-btn:hover {
+      background-color: #45a049;
+    }
+    
   </style>
 </head>
 <body>
@@ -61,6 +79,8 @@
       <li>Programming</li>
     </ul>
   </section>
+  
+   <a class="contact-btn" href="mailto:example@email.com">Contact Me</a>
 
   <footer>
     <p>© 2025 Samaa</p>
