--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       width: 200px;
       margin: 1rem auto;
       padding: 0.5rem;
-      background-color: #4CAF50;
+      background-color: #383f5f;
       color: white;
       text-align: center;
       text-decoration: none;
